Fix ControllBar overlapping last update info, adjust styles. Add precss precompiler

--- a/client/app/components/controllBar/style.css
+++ b/client/app/components/controllBar/style.css
@@ -5,7 +5,7 @@
   background-color: #f9ef7f;
   padding: 10px;
   text-align: center;
-  margin-top: 80px;
+  height: 45px;
 }
 
 .controllButton {
